# algo-poc

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.observability.yml  docker-compose.yml  pyproject.toml
backtest/: _portfolio_state.py  aggregate_risk.py  divergence.py  feature_extractor.py  metrics.py  runner.py  simulator.py
config/: default.yaml  prometheus.yml
data/: paper_state.json
deploy/launchd/: README.md  gateway_watchdog.sh  local.algo-divergence-monitor.plist  local.algo-gateway-watchdog.plist  run_divergence.sh
docs/: strategy.md
docs/operations/: README.md  divergence-monitor.md  go-live-checklist.md  handoff-2026-06.md  investment-policy-statement.md  rollback-playbook.md
docs/plans/: 2026-02-13-trading-bot-design.md  2026-02-13-trading-bot-implementation.md  2026-02-20-backtest-visualization-design.md  2026-02-20-backtest-visualization-implementation.md  2026-02-20-strategy-redesign-design.md  2026-02-21-momentum-strategy-design.md  2026-02-21-momentum-strategy-implementation.md  2026-02-21-strategy-redesign-implementation.md  2026-02-22-multi-strategy-portfolio-design.md  2026-02-22-multi-strategy-portfolio-implementation.md  2026-02-22-phase2-new-strategies-implementation.md  2026-02-22-phase4-tail-risk-rebalancer.md  (+6 more)
migrations/: env.py
scripts/: divergence_monitor.py  fetch_earnings.py  fetch_fundamentals.py  paper_state.py  retrain_model.py  run_backtest.py  run_paper.py  train_signal_model.py  visualize_backtest.py
shared/: config.py  logging.py  market_calendar.py  observability.py  redis_client.py
(+136 files in other folders)
