[project]
name = "algo-poc"
version = "0.1.0"
description = "Automated US equities trading bot"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "psycopg2-binary>=2.9,<3.0",
    "redis>=5.0,<6.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.27,<1.0",
    "httpx>=0.27,<1.0",
    "ib_insync>=0.9,<1.0",
    "lightgbm>=4.0,<5.0",
    "pandas>=2.0,<3.0",
    "numpy>=1.26,<3.0",
    "exchange-calendars>=4.0,<5.0",
    "pyyaml>=6.0,<7.0",
    "structlog>=24.0,<25.0",
    "opentelemetry-api>=1.20,<2.0",
    "opentelemetry-sdk>=1.20,<2.0",
    "prometheus-client>=0.20,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "fakeredis>=2.21",
    "factory-boy>=3.3",
    "testcontainers[postgres,redis]>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
